applications/nextcloud/namespace-nextcloud.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: nextcloud
spec: {}
