applications/nextcloud/deployment-nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:19.0.0-apache
        volumeMounts:
          - name: nextcloud-persistent-storage
            mountPath: /var/www/html
      volumes:
      - name: nextcloud-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-nextcloud
