applications/nextcloud/service-nextcloud.yaml
kind: Service
apiVersion: v1
metadata:
  name: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
  - port: 80
  type: ClusterIP
