applications/nextcloud/service-redis.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
  - port: 6379
  type: ClusterIP
