applications/nextcloud/ingress-nextcloud.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nextcloud
spec:
  rules:
  - host: nextcloud.microk8s.local
    http:
      paths:
      - backend:
          serviceName: nextcloud
          servicePort: 80
